[project]
name = "simple-banking-system"
version = "1.0.0"
description = "Simple Banking System"
authors = [
    { name = "Dylan Lun", email = "dylanlun86@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["banking_system"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=banking_system --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "banking_system/cli.py",        # Exclude CLI (user interface layer) from coverage
    "banking_system/__init__.py",   # Exclude __init__.py (only imports and metadata)
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 